<resources>
    <string name="app_name">AniSearch</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="schedule">Schedule</string>
    <string name="favourites">Favourites</string>
    <string name="news">News</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="mal_link">MAL</string>

    <string name="dummy_text">The sky is the appearance of the atmosphere around the surface of the planet from our point of view. We see many objects that are actually in space such as the Sun, the Moon, and stars because they are in the sky.  The deepness of the blue increases as we look toward the horizon, and up to the point </string>
    <string name="back">Back</string><string name="read_more">Read more</string>
    <string name="read_less">Read less</string>
    <string name="not_listed_on_mal">Not listed on MAL</string>
    <string name="trailer_link_not_found">Trailer Link Not Found</string>

    <string-array name="anime_details_series_tabs">
        <item>OVERVIEW</item>
        <item>EPISODES</item>
        <item>CHARACTERS</item>
    </string-array>

    <string name="label_aired">Aired</string>
    <string name="label_duration">Duration</string>
    <string name="label_episodes">Episodes</string>
    <string name="label_members">Members</string>
    <string name="label_rank">Rank</string>
    <string name="label_favorites">Favorites</string>
    <string name="genres">Genres</string>
    <string name="studios">Studios</string>
    <string name="producers">Producers</string>
    <string name="retryApiCall">Retry</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="episode_number">Ep %1$d</string>
    <string name="character_name">Name: %1$s</string>
    <string name="character_role">Role: %1$s</string>

</resources>